--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    
     <head>
        
-       <link href="main.css" rel="stylesheet">
+       <link href="main.CSS" rel="stylesheet">
         <!-- META -->
         <meta charset="utf-8">
         <meta name="robots" content="noodp">
