--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
        
         <!-- FAVICON -->
         <link rel="shortcut icon" href="assets/img/favicon.png">
+        <link rel="stylesheet" href="assets/css/main.css">
        
         <!-- FONTS -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&amp;subset=latin-ext" rel="stylesheet">
